--- a/projeto-bd/src/main/resources/application.properties
+++ b/projeto-bd/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=projeto-bd
 spring.datasource.url=jdbc:mysql://localhost:3306/premaimagem
 spring.datasource.username=root
-spring.datasource.password=pgk88433
+spring.datasource.password=maio1705
