--- a/projeto-bd/src/main/resources/application.properties
+++ b/projeto-bd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=projeto-bd
 spring.datasource.url=jdbc:mysql://localhost:3306/premaimagem
 spring.datasource.username=root
-spring.datasource.password=maio1705
+spring.datasource.password=pgk88433
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
